# Advanced-Fast-and-Accurate-3D-Object-Detection-using-ResNet-and-Feature-Pyramid-Network

./: .giti  .gitignore  README.md
logs/Fine_Tuning_using_SFA_3D_Dataset/: logger_Fine_Tuning_using_SFA_3D_Dataset.txt
logs/Fine_Tuning_using_SFA_3D_Dataset_using_Racing_Scene/: logger_Fine_Tuning_using_SFA_3D_Dataset_using_Racing_Scene.txt
logs/Training_Rosbag_Hyundai_Race_using_All_Rosbag_Hyundai_Data_300_Epochs/: logger_Training_Rosbag_Hyundai_Race_using_All_Rosbag_Hyundai_Data_300_Epochs.txt
logs/Training_SFA_3D_Dataset_Hyundai_Rosbag_Labelling_Intern_Input_800/: logger_Training_SFA_3D_Dataset_Hyundai_Rosbag_Labelling_Intern_Input_800.txt
logs/Training_SFA_3D_Dataset_Hyundai_Rosbag_Labelling_Intern_Input_900/: logger_Training_SFA_3D_Dataset_Hyundai_Rosbag_Labelling_Intern_Input_900.txt
logs/Training_SFA_3D_Dataset_Hyundai_Rosbag_Labelling_Intern_with_New_Data_Input_800/: logger_Training_SFA_3D_Dataset_Hyundai_Rosbag_Labelling_Intern_with_New_Data_Input_800.txt
logs/Training_SFA_3D_Dataset_Rosbag_Hyundai_Race_using_800_PCD_Data/: logger_Training_SFA_3D_Dataset_Rosbag_Hyundai_Race_using_800_PCD_Data.txt
sfa/: Automatic_Evaluation_MAP_SFA_3D_Model.py  Automatic_Evaluation_MAP_SFA_3D_Model_for_SFA_3D_New_Rosbag_Hyundai_Dataset_Input_800_Range_120_M.txt  Output_PredictionGround_Truth_Dataset_SFA_3D_from_Bag.txt  SFA_3D_Rosbag_Hyundai_Evaluation.csv  inference_sfa3d_ros.py  map_evaluation.py  test.py  train.py
sfa_inference_ws/src/models/: CMakeLists.txt  package.xml  setup.py
sfa_inference_ws/src/models/src/models/: fpn_resnet.py  model_utils.py
(+718 files in other folders)
